# api-server

./: .env.example  Makefile.toml  README.md
.github/workflows/: check.yml  test.yml
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/api/src/mutation/: account.rs  mod.rs  session.rs  user.rs  verification_token.rs
crates/api/src/query/: account.rs  category.rs  mod.rs  session.rs  user.rs
crates/entity/: Cargo.toml
crates/entity/src/: account.rs  ad.rs  category.rs  lib.rs  region.rs  session.rs  user.rs  verification_token.rs
crates/migration/: Cargo.toml
crates/migration/src/: m20220101_000001_create_table.rs  main.rs
crates/sellershut/: Cargo.toml
crates/sellershut/src/: main.rs
crates/server/: Cargo.toml
crates/server/src/: log.rs  main.rs
