[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cuid2 = "0.1.0"
entity = { version = "0.1.0", path = "../entity" }
tokio = { version = "1.28.0", features = ["macros"] }
tracing = "0.1.37"
