[package]
name = "sellershut"
version = "0.1.0"
edition = "2021"
default-run = "sellershut"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = { version = "0.1.0", path = "../api" }
async-graphql-axum = "5.0.7"
axum = "0.6.12"
dotenvy = "0.15.7"
entity = { version = "0.1.0", path = "../entity" }
tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.4.0", features = ["trace", "cors"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
